# RoadExpeditionerDrone

./: .clangd  .gitmodules  CITATION.cff  DEVELOP.md  README.md  docker-compose.yml  pyproject.toml  third_party.repos
.devcontainer/: devcontainer.json
docker/: Dockerfile.dev
src/red_bringup/: CMakeLists.txt  package.xml
src/red_bringup/config/: clock_bridge.yaml
src/red_bringup/launch/: simulation.launch.py
src/red_bringup/rviz/: default.rviz
src/red_geometric_controller/: CMakeLists.txt  package.xml
src/red_geometric_controller/include/red_geometric_controller/: geometric_controller.hpp  motor_mixing.hpp  quadcopter_params.hpp  transform.hpp
src/red_geometric_controller/launch/: geometric_controller.launch.py
src/red_geometric_controller/src/: geometric_controller.cpp  motor_mixing.cpp  quadcopter_params.cpp  transform.cpp
src/red_gz_plugin/: CMakeLists.txt  package.xml
src/red_gz_plugin/models/OakD-Lite/: model.sdf
src/red_gz_plugin/models/x500/: model.sdf
src/red_gz_plugin/models/x500_base/: model.sdf
src/red_gz_plugin/models/x500_depth/: model.sdf
src/red_gz_plugin/src/: flight_interface.cpp
src/red_navigator/: CMakeLists.txt  package.xml
src/red_navigator/config/: nav2_params.yaml
src/red_navigator/include/red_navigator/: frontier_explorer.hpp  trajectory_planner.hpp
src/red_navigator/launch/: nav2.launch.py  navigator.launch.py
src/red_navigator/src/: frontier_explorer.cpp  navigator.cpp  trajectory_planner.cpp
src/red_perception/: CMakeLists.txt  package.xml
src/red_perception/config/: rtabmap_params.yaml
src/red_perception/launch/: perception.launch.py
src/red_vio_estimator/: CMakeLists.txt  package.xml
src/red_vio_estimator/config/openvins/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
src/red_vio_estimator/launch/: vio_estimator.launch.py
src/red_vio_estimator/src/: odom_adapter.cpp  odom_tf_broadcaster.cpp
