<?xml version="1.0"?>
<package format="3">
  <name>red_gz_plugin</name>
  <version>1.0.0</version>
  <description>Custom Gazebo plugins bridging simulated quadrotors with ROS 2</description>
  <maintainer email="lionlai1989@gmail.com">Chih-An Lion Lai</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>actuator_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
